[metadata]
author = Mark Burnett
author-email = mburnett@genome.wustl.edu
home-page = https://github.com/mark-burnett/lsf-python
name = lsf
version = 0.1.0
summary = A simple interface to LSF.
description-file =
    README.rst
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: System :: Clustering


[files]
packages =
    lsf

[global]
setup-hooks =
    pbr.hooks.setup_hook
